--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,12 @@ main {
   align-content: center;
   box-sizing: border-box;
   display: grid;
-  font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica',
-    'Arial', sans-serif;
+  font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica",
+    "Arial", sans-serif;
   hyphens: auto;
   line-height: 1.65;
   margin: 0 auto;
-  max-width: 680px;
+  max-width: 940px;
   min-height: 100vh;
   padding: 72px 0;
   text-align: center;
@@ -40,5 +40,5 @@ pre {
 }
 code:before,
 code:after {
-  content: '\`';
+  content: "\`";
 }
